049_rot_matrix/grade.txt
Grading at 10/03/2022:04:02:31.935402
For commit ID 6de924c1083d224844d1f266e96d13b47b6c9aef
Grading at Mon Oct  3 12:02:31 AM EDT 2022
Attempting to compile rotateMatrix.c
rotateMatrix.c:6:20: error: unknown type name ‘File’
    6 | void rotate_matrix(File * f) {
      |                    ^~~~
rotateMatrix.c: In function ‘main’:
rotateMatrix.c:61:5: error: implicit declaration of function ‘fprinnf’; did you mean ‘fprintf’? [-Werror=implicit-function-declaration]
   61 |     fprinnf(stderr, "Could not open file");
      |     ^~~~~~~
      |     fprintf
rotateMatrix.c:64:3: error: implicit declaration of function ‘rotate_matrix’ [-Werror=implicit-function-declaration]
   64 |   rotate_matrix(f);
      |   ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
